syntax = "proto3";

option csharp_namespace = "Projux.UI.WPF.Proto";

package customer_contact;

// The greeting service definition.
service CustomerContact {
  rpc Insert (InsertRequest) returns (InsertReply);
  rpc Update (UpdateRequest) returns (UpdateReply);
  rpc FindById (FindByIdRequest) returns (FindByIdReply);
  rpc FindAll (FindAllRequest) returns (FindAllReply);
  rpc DeleteById (DeleteByIdRequest) returns (DeleteByIdReply);
}

// Insert messages
message InsertRequest {
  string FirstName = 1;
  string LastName = 2;
  string EmailAddress = 3;
  string PhoneNumber = 4;
}

message InsertReply {
  string Id = 1;
  bool Successful = 2;
  string ErrorMessage = 3;
}

// Update messages
message UpdateRequest {
  string name = 1;
}

message UpdateReply {
  string message = 1;
}

// Find by id messages
message FindByIdRequest {
  string name = 1;
}

message FindByIdReply {
  string message = 1;
}

// Find all messages
message FindAllRequest {
  string name = 1;
}

message FindAllReply {
  string message = 1;
}

// Delete by id messages
message DeleteByIdRequest {
  string name = 1;
}

message DeleteByIdReply {
  string message = 1;
}